--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,6 +42,10 @@ environment:
       PYTHON_ARCH: "64"
       OPENSSL_LIB: "openssl-1.0.2k-vs2015"
 
+    - PYTHON: "C:\\Python37-x64"
+      PYTHON_ARCH: "64"
+      OPENSSL_LIB: "openssl-1.0.2k-vs2015"
+
 install:
   - "%PYTHON%\\python.exe -m pip install wheel"
 
